Removed all unnessary files

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,10 +57,11 @@
         android:id="@+id/btnOffers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/teal_700"
         android:text="@string/offer_btn_text"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:backgroundTint="@color/teal_700"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.851"
